# multiple_sequence_alignment

./: .gitmodules  README.md  pyproject.toml  requirements.txt
.github/workflows/: replace-readme-placeholders.yml
data/: 1dna.fasta  2dna.fasta  3dna.fasta  4dna.fasta  multiple_sequences_dna.fasta  multiple_sequences_protein.fasta
output/: msa_output.txt
results/: msa_output.txt
src/: cli.py  gui.py
src/core/: build_pairwise_score_matrix.py
tests/: test_pairwise.py
utils/: functions.py
